[automation] Auto-update linters version, help and documentation